--- a/MovieFightApp/style.css
+++ b/MovieFightApp/style.css
@@ -1,3 +1,4 @@
+
 .tutorial {
   width: 600px;
   text-align: center;
@@ -28,12 +29,29 @@ figure .image img {
 }
 
 .hero {
+  height: 200px;
   margin-bottom: 20px;
+  background-image: url("./img/oscars.jpg");
+  margin-bottom: 80px;
+}
+
+
+.hero .title{
+  text-align: center;
+  color:white;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .forms {
   display: flex;
   justify-content: space-around;
+}
+
+label{
+  color: black;
+  font-size: 20px;
 }
 
 .dropdown-item {
